# portkey-strands-integration

./: CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  unit-tests.yml
examples/: agent_state.py  async_patterns.py  basic_agent.py  callback_handler.py  conversation_history.py  conversation_management.py  error_handling.py  hooks.py  multi_provider.py  multimodal.py  reasoning.py  session_management.py  streaming.py  structured_output.py  system_prompt_content.py  tool_choice.py  tool_use.py
src/strands_portkey/: __init__.py  _config.py  _errors.py  _formatting.py  model.py
tests/: conftest.py
tests/integration/: _helpers.py  conftest.py  test_client_args.py  test_error_handling.py  test_model_params.py  test_multimodal.py  test_parallel_tool_use.py  test_reasoning.py  test_streaming.py  test_structured_output.py  test_system_prompt.py  test_tool_choice.py  test_tool_use.py
tests/unit/: test_config.py  test_errors.py  test_formatting.py  test_model.py
